cambio de errores

--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -11,5 +11,5 @@
 </body>
     <script src="speakHello.js"></script>
     <script src="speakGoodBye.js"></script>
-    <script src="script4.js"></script>
+    <script src="script.js"></script>
 </html>
